syntax = "proto3";

package com.reqreply.user;

option java_multiple_files = true;

import "com/example/ajax/user.proto";

message DeleteUserRequest {
  string user_id = 1;
}

message DeleteUserResponse {
  oneof response {
    Success success = 1;
    Failure failure = 2;
  }

  message Success {

  }

  message Failure {
    string message = 100;
  }
}
